--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "dependencies": {
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
+    "@ai-sdk/google": "^1.2.1",
+    "@google/generative-ai": "^0.24.0",
+    "ai": "^4.2.1",
+    "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
+    "node-html-parser": "^7.0.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
